--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,7 @@ name: Algosec Prevasio CI/CD Container Security Yaml Workflow
 on:
   pull_request:
     branches:
-      - main
+    - main
   workflow_dispatch:
 jobs:
   algosec-prevasio-cicd-container-security:
@@ -12,17 +12,17 @@ jobs:
       contents: read
       pull-requests: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Algosec Prevasio CI/CD Container Security
-        uses: algosec/prevasio-cicd-container-security-action@v1.0.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ALGOSEC_TENANT_ID: ${{ secrets.ALGOSEC_TENANT_ID }}
-          ALGOSEC_CLIENT_ID: ${{ secrets.ALGOSEC_CLIENT_ID }}
-          ALGOSEC_CLIENT_SECRET: ${{ secrets.ALGOSEC_CLIENT_SECRET }}
-          WORKING_DIR: .
-          DOCKERFILE_NAME: Dockerfile
-          MIN_LEVEL_TO_BLOCK_PR: 0
-          CF_LOGIN_API: https://dev.app.algosec.com/api/algosaas/auth/v1/access-keys/login
-          CF_REGION: dev
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Algosec Prevasio CI/CD Container Security
+      uses: algosec/prevasio-cicd-container-security-action@v1.0.5
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ALGOSEC_TENANT_ID: ${{ secrets.ALGOSEC_TENANT_ID }}
+        ALGOSEC_CLIENT_ID: ${{ secrets.ALGOSEC_CLIENT_ID }}
+        ALGOSEC_CLIENT_SECRET: ${{ secrets.ALGOSEC_CLIENT_SECRET }}
+        WORKING_DIR: .
+        DOCKERFILE_NAME: Dockerfile
+        MIN_LEVEL_TO_BLOCK_PR: 0
+        CF_LOGIN_API: https://rbac-ph-2.app.algosec.com/api/algosaas/auth/v1/access-keys/login
+        CF_REGION: dev
