--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,5 +24,5 @@ jobs:
         WORKING_DIR: .
         DOCKERFILE_NAME: Dockerfile
         MIN_LEVEL_TO_BLOCK_PR: 0
-        CF_LOGIN_API: https://rbac-ph-2.app.algosec.com/api/algosaas/auth/v1/access-keys/login
+        CF_LOGIN_API: https://dev.app.algosec.com/api/algosaas/auth/v1/access-keys/login
         CF_REGION: dev
